# r8862a-ezelink

./: .config  .gitignore  feeds.conf.default  rules.mk  version  version.date
cls-prods-config/: cs8862a-mesh.config  cs8862a-rdk.config
feeds/: luci
feeds/clsgui/: README.md  clsgui.mk
include/: image-commands.mk  image.mk  u-boot.mk  version.mk
package/: bmu.patch  supported_yt9215sc_driver_of_linux.patch
package/clsemi/cls-qos/src/: CMakeLists.txt  classic_qos.c  clsqos.h  rpcd-clsqos.c
package/clsemi/cls-qos/src/kernel/: Makefile  cls_qos.c
package/network/services/netcwmp/src/cwmpd/src/: Makefile  Makefile.am  Makefile.in  agent.c  conf.c  cwmpd.c  httpd.c  process.c  thread.c  ubus.c
package/network/services/netcwmp/src/cwmpd/src/modules/: data_model.c  data_model_util.c  data_model_util.h
package/network/services/netcwmp/src/cwmpd/src/modules/Device/: Device.c
package/network/services/netcwmp/src/cwmpd/src/modules/Device/WiFi/: WiFi.c
package/network/services/netcwmp/src/cwmpd/src/modules/Device/WiFi/AccessPoint/: AccessPoint.c
package/network/services/netcwmp/src/cwmpd/src/modules/Device/WiFi/EndPoint/: EndPoint.c
package/network/services/netcwmp/src/cwmpd/src/modules/Device/WiFi/Radio/: Radio.c
package/network/services/netcwmp/src/cwmpd/src/modules/Device/WiFi/SSID/: SSID.c
package/network/services/netcwmp/src/cwmpd/src/modules/InternetGatewayDevice/DeviceInfo/: DeviceInfo.c
package/network/services/netcwmp/src/cwmpd/src/modules/InternetGatewayDevice/ManagementServer/: ManagementServer.c
scripts/: gen-secure-boot-key.sh  mkits.sh  ubinize-image.sh
(+2635 files in other folders)
